# ensicoin-simon

./: Cargo.toml  README.md  build.rs
src/: cli.rs  main.rs
