[package]
name = "ensicoin-simon"
version = "0.1.0"
authors = ["Papin Johyn <johynpapin@protonmail.com>"]
edition = "2018"

[dependencies]
ensicoin_messages = "*"
ensicoin_serializer = "*"
num-bigint = "^0.2"
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
tower-hyper = { git = "https://github.com/tower-rs/tower-hyper" }
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-service = "*"
tower-util = "*"
futures = "*"
tokio = "*"
tokio-sync = "*"
prost = "*"
log = "*"
bytes = "*"
simplelog = "*"
clap = "*"
http = "0.1"
hyper = "0.12"
sha2 = "0.8"
ripemd160 = "0.8.0"
secp256k1 = "0.15.5"

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc", features = ["tower-hyper"] }
