[package]
name = "ensicoin-simon"
version = "0.1.0"
authors = ["Papin Johyn <johynpapin@protonmail.com>"]
edition = "2018"

[dependencies]
ensicoin_messages = "0.7.4"
ensicoin_serializer = "2.0.9"
num-bigint = "0.2.3"
tower-grpc = "0.1.0"
tower-hyper = "0.1.1"
tower-request-modifier = "0.1.0"
tower-service = "0.2.0"
tower-util = "0.1.0"
futures = "0.1.29"
tokio = "0.1.22"
tokio-sync = "0.1.6"
prost = "0.5.0"
log = "0.4.8"
bytes = "0.4.12"
simplelog = "0.7.1"
clap = "2.33.0"
http = "0.1.18"
hyper = "0.12.34"
sha2 = "0.8.0"
ripemd160 = "0.8.0"
secp256k1 = "0.15.5"

[build-dependencies]
tower-grpc-build = { version = "0.1.0", features = ["tower-hyper"] }
